--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@
   <meta name="format-detection" content="telephone=no, email=no, address=no">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <meta name="description" content="WebGL 处理图片示例">
-  <title>WebGL Process Image</title>
+  <title>WebGL Process Image⚡️</title>
 </head>
 <body>
   <div id="app" />
